<resources>
    <string name="app_name">Robot_v4</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="Welcome">Robot car controller by Wanchalerm Wanthanang</string>
    <string name="PairBT">Pair new device</string>
    <string name="Manual">Manual driving</string>
    <string name="UP">Go ahead</string>
    <string name="LEFT">Turn left</string>
    <string name="RIGHT">Turn right</string>
    <string name="Mode_O">Mode object evasion</string>
    <string name="Mode_L">Mode line tracking</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Mode_A">Auto driving</string>
    <string name="step5">5 steps</string>
    <string name="step10">10 steps</string>
    <string name="step20">20 steps</string>
    <string name="STOP">Stop</string>
    <string name="CP">Click pair new device to connect your robot</string>
    <string name="DOWN">Reverse</string>
    <string name="MC">Motion control</string>
    <string name="modeZI">Mode move zigzag</string>
    <string name="DM">Distance measurement</string>
    <string name="btnExit">Back</string>
    <string name="moveF">Forward</string>
    <string name="mover">Reverse</string>
    <string name="distance">"Distance = "</string>
    <string name="cm">000 cm</string>
    <string name="MoveRec">Movement by record</string>
    <string name="title_activity_move_by_record">Movement by record</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="btnStart">Start</string>
    <string name="wait" />
    <string name="inputNumber">1:Move forward\n2:Reverse\n3:Turn left\n4:Turn right</string>
    <string name="save">Save</string>
    <string name="init_Text">111222</string>
    <string name="title_activity_robot_controller">Robot_Tohng</string>
    <string name="title_activity_distance_measurement">Distance measurement</string>
    <string name="title_activity_manual_movement">Manual movement</string>
    <string name="MN">Manual</string>
    <string name="title_activity_robot_controller2">RC_MK2</string>
    <string name="mode">Mode</string>
    <string name="close">Close</string>
    <string name="connect">Connect</string>
    <string name="no_socket_error">Error during reading/writing byte. Please connect Bluetooth again.</string>
    <string name="error_read_byte">Error during read byte: %1$s</string>
    <string name="connection_error">Connection error: %1$s</string>
    <string name="error_write_byte">Error during write byte: %1$s</string>
    <string name="no_data">No data received.</string>
    <string name="please_connect_bt">Please connect Bluetooth again.</string>
    <string name="already_stopped">Already stopped.</string>
    <string name="error">Error: %1$s</string>
    <string name="moving_forward">Moving forward</string>
    <string name="ready">Ready</string>
    <string name="moving_backward">Moving backward</string>
    <string name="turning_left">Turning left</string>
    <string name="turning_right">Turning right</string>
    <string name="please_fill_number">Please fill in number for movement direction of Robot car</string>
    <string name="saved_to">Saved to %1$s/%2$s</string>
    <string name="please_wait">Please wait while Robot car is moving!</string>
    <string name="complete_moving">Complete moving.</string>
</resources>
