<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ButtonStyle"
    tools:context=".RobotController">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Spinner
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btDis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/Manual"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/UP"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/DOWN"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LEFT"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RIGHT"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Mode_A"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Mode_O"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonLI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Mode_L"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonZI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/modeZI"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/STOP"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_gravity="center"
            android:text="@string/mode"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MN"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/buttonRE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MoveRec"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonDM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/DM"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>
